<resources>
    <string name="app_name">ReStock</string>
    <string name="category_title">Category Title</string>
    <string name="order_no">Order No.</string>
    <string name="item_name">Item Name</string>
    <string name="item_s_price">Item\'s Price</string>
    <string name="remove">-</string>
    <string name="_0">0</string>
    <string name="add">+</string>
    <string name="u20ac">€</string>
    <string name="euro_0">0 €</string>
    <string name="total">Total:</string>
    <string name="new_order">New Order</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="complete">Complete</string>
    <string name="title_activity_order_history">Order\nHistory</string>
    <string name="view_profile">View Profile</string>
    <string name="owner_name">Makis Tsarlatanos</string>
    <string name="profile">Profile</string>
    <string name="profile_pg">Your Profile</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="signedIn">Keep me Signed In</string>

    <!-- Strings used for hints -->
    <string name="pass">Password</string>
    <string name="passConfirm">Confirm Password</string>
    <string name="email">E-mail</string>
    <string name="afm">Tax reg. number</string>
    <string name="brand_name">Brand name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="history">Orders\' History</string>
    <string name="date">Date</string>
    <string name="emailAddressHint">Enter Recipient\'s Email Address</string>
    <string name="emailBodySuggestion">Enter email body</string>
    <string name="testTxt">Test</string>
    <string name="emailSubjectSuggestion">Enter email subject</string>
    <string name="totalValue">Total</string>
    <string name="title_order_history">Order History</string>
    <string name="status">Status</string>
    <string name="sort_by">Sort by:</string>
    <string name="order_id">Order id</string>
    <string name="order_date">Order date</string>
    <string name="pdf_fbtn_content_desc">PDF file path</string>
    <string name="sortingButtonDescription">SortingButton</string>
    <string name="total_descending_button">Total descending button</string>
    <string name="total_ascending_button">Total ascending button</string>
    <string name="order_number_descending_button">Order number descending button</string>
    <string name="order_number_ascending_button">Order number ascending button</string>
    <string name="supplier">Supplier</string>
    <string name="send_to_supplier">Send to supplier</string>
    <string name="finish">Finish</string>
    <string name="order_nno">Order No.</string>
    <string name="refreshing_button_description">Refreshing button</string>
    <string name="sign_out">Sign Out</string>
    <string name="app_s_logo">App\'s logo</string>
    <string name="if_you_don_t_have_an_account_please_sign_up">If you don\'t have an account, please sign up.</string>
    <string name="send_email">Send Email</string>

    <string-array name="sort_types">
        <item>Order No. Desc.</item>
        <item>Total Asc.</item>
        <item>Total Desc.</item>
    </string-array>
</resources>