<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompletedOrder">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/completedOrderToolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sendToSupplierTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:text="@string/send_to_supplier"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/completedOrderToolbar"
        app:layout_constraintEnd_toEndOf="@+id/completedOrderToolbar"
        app:layout_constraintStart_toStartOf="@+id/completedOrderToolbar"
        app:layout_constraintTop_toTopOf="@+id/completedOrderToolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:text="@string/supplier"
        app:layout_constraintBottom_toTopOf="@+id/suppliersRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completedOrderToolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/suppliersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="616dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/finishOrderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suppliersRecyclerView" />
</androidx.constraintlayout.widget.ConstraintLayout>